# rag

./: .env.example  .gitignore  README.md  app.py  configs.py  docker-compose.yaml  ingestion.py  main.py  pyproject.toml
.chainlit/: config.toml
agent/: consts.py  graph.py  retriever_graph.py  state.py
agent/nodes/: base.py  compress_docs.py  generate_answer.py  generate_queries.py  grade_documents.py  grade_hallucination.py  grade_question.py  grade_usefulness.py  reject.py  retrieve_docs.py  rewriter_question.py  summarize_document.py  websearch.py
agent/utils/: embedding.py  llm.py  misc.py  parser.py  rerank.py  retriever.py  vectorstore.py
agent/utils/lib/: infinity_reranker.py
